--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>kr.soylatte</groupId>
-    <artifactId>Study</artifactId>
+    <artifactId>Spring_Study</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
         <org.springframework-version>4.3.16.RELEASE</org.springframework-version>
+        <version>1.2.3</version>
     </properties>
 
     <dependencies>
